--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,9 @@
     @apply bg-black text-white;
   }
 }
+
+@layer utilities {
+  .text-gradient-primary {
+    @apply inline-block bg-gradient-to-r from-primary-400 to-primary-600 bg-clip-text text-transparent;
+  }
+}
