--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,11 @@
 
 @layer base {
   body {
-    @apply bg-black text-white min-h-screen;
+    @apply bg-black text-white min-h-screen font-rubik;
+  }
+
+  code {
+    @apply font-ibm-plex-mono;
   }
 }
 
